# RPICpp

./: CMakeLists.txt  document.txt  main.cpp  rpp.cpp  rpp.h  stepper.cpp
src/: axle.cpp  axle.h  rpp.cpp  rpp.h  stepper.cpp  stepper.h
